--- a/app/assets/stylesheets/templates/_toolbars.less
+++ b/app/assets/stylesheets/templates/_toolbars.less
@@ -2,20 +2,6 @@
 
 @toolbarTextShadow: 0 0 3px;
 
-// MIXINS
-
-.toolbar-panel-color(@c) {
-	a {
-		color: mix(@c, @g2, 50%);
-	}
-
-	&.current {
-		a {
-			text-shadow: @toolbarTextShadow mix(@c, @g4, 33%);
-		}
-	}
-}
-
 // STYLES
 
 .toolbar {
@@ -76,35 +62,9 @@
 
 		&.current {
 			a {
-				text-shadow: @toolbarTextShadow mix(@g3, @g4, 33%);
+				text-shadow: @toolbarTextShadow mix(@c4, @g5, 50%);
 			}
 		}
-	}
-
-	.link_panel_data,
-	.link_panel_browser {
-		.toolbar-panel-color(@c8);
-	}
-
-	.link_panel_materials {
-		.toolbar-panel-color(@c6);
-	}
-
-	.link_panel_publications {
-		.toolbar-panel-color(@c4);
-	}
-
-	.link_panel_people,
-	.link_panel_network {
-		.toolbar-panel-color(@c2);
-	}
-
-	.link_panel_tags {
-		.toolbar-panel-color(@c0);
-	}
-
-	.link_panel_comments {
-		.toolbar-panel-color(@c10);
 	}
 
 	a {
@@ -112,9 +72,6 @@
 		color: @g1;
 
 		&:hover {
-			color: @g2;
-			text-shadow: @toolbarTextShadow @g5;
-
 			img {
 				.box-shadow(0 0 5px @g5);
 			}
